Fix vertical alignment of twitter share button

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -307,6 +307,14 @@ body {
 }
 
 
+// Twitter 'Share' Button
+// ======================
+
+.twitter-share-button {
+  vertical-align : middle;
+}
+
+
 // Device-Dependent Styles
 // =======================
 
